fix spacing b/w grid items

--- a/_harp/assets/css/_partials/_portfolio.scss
+++ b/_harp/assets/css/_partials/_portfolio.scss
@@ -42,13 +42,17 @@
         margin-top: 4%;
         margin-left: 4%;
     }
+
     .project:nth-child(3) {
         margin-top: 0;
     }
 
     // reinstate margin for rightmost and odd-numbered columns
-    .project:nth-child(3n),
-    .project:nth-child(2n+3) {
+    .project:nth-child(3n-1) {
+        margin-left: 4%;
+    }
+    // reinstate margin for rightmost and odd-numbered columns
+    .project:nth-child(3n) {
         margin-left: 4%;
     }
 
